<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2016 Álinson Santos Xavier <isoron@gmail.com>
  ~
  ~ This file is part of Loop Habit Tracker.
  ~
  ~ Loop Habit Tracker is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by the
  ~ Free Software Foundation, either version 3 of the License, or (at your
  ~ option) any later version.
  ~
  ~ Loop Habit Tracker is distributed in the hope that it will be useful, but
  ~ WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  ~ or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
  ~ more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="?windowBackgroundColor"
    android:fillViewport="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:popupTheme="?toolbarPopupTheme" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <LinearLayout style="@style/CardList">



            <LinearLayout
                style="@style/Card"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="@color/red_900"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/about_logo" />


                <!--                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:textStyle="bold"
                                    android:textSize="16sp"
                                    android:layout_margin="6dp"
                                    android:textColor="?aboutScreenColor"
                                    android:text="@string/app_name"
                                    android:visibility="gone"/>-->


            </LinearLayout>

            <LinearLayout
                style="@style/Card"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?aboutScreenColor"
                        android:text="Version:   " />

                    <TextView
                    android:id="@+id/tvVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:text="" />

                </LinearLayout>
                <TextView
                    style="@style/About.Item"
                    android:height="24dp"
                    android:text="" />
                <TextView
                    style="@style/CardHeader"
                    android:text="@string/links"
                    android:textColor="?aboutScreenColor" />

                <TextView
                    style="@style/About.Item"
                    android:height="12dp"
                    android:text="" />

                <TextView
                    android:id="@+id/tvRate"
                    style="@style/About.Item.Clickable"
                    android:text="@string/pref_rate_this_app"
                    android:visibility="gone" />

                <TextView
                    style="@style/About.Item"
                    android:text="For any Query Contact us @" />

                <TextView
                    android:id="@+id/tvFeedback"
                    style="@style/About.Item.Clickable"
                    android:text="@string/pref_send_feedback" />

                <TextView
                    style="@style/About.Item"
                    android:height="12dp"
                    android:text="" />
                <TextView
                    style="@style/About.Item"
                    android:text="Send Bug Report us @" />

                <TextView
                    android:id="@+id/tvBugReport"
                    style="@style/About.Item.Clickable"
                    android:text="@string/pref_send_feedback" />

                <TextView
                    android:id="@+id/tvTranslate"
                    style="@style/About.Item.Clickable"
                    android:text="@string/help_translate"
                    android:visibility="gone" />

                <TextView
                    style="@style/About.Item"
                    android:height="10dp"
                    android:text="" />

                <TextView
                    style="@style/About.Item"
                    android:text="Visit us @" />

                <TextView
                    android:id="@+id/tvSource"
                    style="@style/About.Item.Clickable"
                    android:text="@string/pref_view_source_code" />

            </LinearLayout>

            <LinearLayout
                style="@style/Card"
                android:gravity="center"
                android:visibility="gone">

                <TextView
                    style="@style/CardHeader"
                    android:text="@string/developers"
                    android:textColor="?aboutScreenColor" />

                <TextView
                    style="@style/About.Item"
                    android:text="Álinson Xavier" />

                <TextView
                    style="@style/About.Item"
                    android:text="Денис (sciamano)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Joseph Tran" />

                <TextView
                    style="@style/About.Item"
                    android:text="Nikhil (regularcoder)" />

                <TextView
                    style="@style/About.Item"
                    android:text="JanetQC" />

            </LinearLayout>

            <LinearLayout
                style="@style/Card"
                android:gravity="center"
                android:visibility="gone">

                <TextView
                    style="@style/CardHeader"
                    android:text="@string/translators"
                    android:textColor="?aboutScreenColor" />

                <TextView
                    style="@style/About.Item"
                    android:text="Mihail Stefanov (Български)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Angga Rifandi (Bahasa Indonesia)" />

                <TextView
                    style="@style/About.Item"
                    android:text="raden20 (Bahasa Indonesia)" />

                <TextView
                    style="@style/About.Item"
                    android:text="azzamsa (Bahasa Indonesia)" />

                <TextView
                    style="@style/About.Item"
                    android:text="David Nos (Català)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Tomáš Borovec (Čeština)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Rancher (Cрпски)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Yussuf (Dansk)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Sølv Ræven (Dansk)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Matthias Meisser (Deutsch)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Sojusnik (Deutsch)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Can Altas (Deutsch)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Ander Raso Vazquez (Español)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Beriain (Euskara)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Andreas Michelakis (Ελληνικά)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Eman (Fārsi)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Saeed Esmaili (Fārsi)" />

                <TextView
                    style="@style/About.Item"
                    android:text="François Mahé (Français)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Thibaut Girka (Français)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Mathis Chenuet (Français)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Michael Faille (Français)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Ivan Krušlin (Hrvatski)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Marco Cavazza (Italiano)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Mark Macaré (Nederlands)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Jelle den Butter (Nederlands)" />

                <TextView
                    style="@style/About.Item"
                    android:text="nitovf9292 (Norsk)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Adam Jurkiewicz (Polski)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Álinson Xavier (Português)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Bernardo Lopes (Português)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Dmitriy Bogdanov (Русский)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Andrei Pleș (Română)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Dušan Strgar (Slovenščina)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Alexander Jansson (Svenska)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Robin (Svenska)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Đorđe Vasiljević (српски)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Caner Başaran (Türkçe)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Yurii Stavytskyi (Українська)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Rystard (Українська)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Oglaigh Rystard (Українська)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Limin Lu (中文)" />

                <TextView
                    style="@style/About.Item"
                    android:text="XuToTo (中文)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Ting-Hua (中文)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Bowie Chen (中文)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Lee (中文)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Liveeasy (中文)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Naofumi F (日本語)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Al Alloush (العَرَبِية‎)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Josh Graham (한국어 )" />

                <TextView
                    style="@style/About.Item"
                    android:text="Seoyul (한국어 )" />

                <TextView
                    style="@style/About.Item"
                    android:text="Aman Satnami (हिन्दी)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Niraj Yadav (हिन्दी)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Yoav Argov (עברית‎)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Mahdi Nasiri (فارسی‎)" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/toolbarShadow"
        style="@style/ToolbarShadow"
        android:layout_below="@id/toolbar" />

</RelativeLayout>
